# antares

./: .gitignore  CMakeLists.txt  QtMediaSwipe.qmlproject  QtMediaSwipe.qmlproject.qtds  README.md  buildspec.yml  codebuild_failure_logs.txt  fix_build_failure_prompt.md  qmlmodules  share.qrc  translations.db
.github/: README.md
.github/docker/: DOCKER.md  Dockerfile  build-qt-image.sh  push-to-ecr.sh
.github/workflows/: Dockerfile.boot2qt  EC2_DEPLOYMENT_README.md  boot2qt-aws.yml  boot2qt-build.yml  build-boot2qt.sh  build.yml  buildspec-docker.yml  deploy-to-ec2.sh
Cluster/: CMakeLists.txt  CMakeLists.txt.shared  Cluster.qmlproject  Cluster.qmlproject.qtds  Cluster.qrc  GLO.qmlproject  GLO.qmlproject.qtds  GLO.qmlproject.qtds.0e71d1e  GLO.qrc  qds.cmake  qtquickcontrols2.conf  temp.qrc  translations.db
Cluster/App/: CMakeLists.txt  main.cpp
Cluster/App/autogen/: environment.h
Cluster/Cluster/: CMakeLists.txt  JsonData.qml  Themes.qml  qmldir
Cluster/ClusterContent/: AdasView3D.ui.qml  App.qml  CMakeLists.txt  Screen01.ui.qml  Screen02.ui.qml  qmldir
Cluster/ClusterContent/3d/: GenericCarModel.q3d  Lights.q3d
Cluster/ClusterContent/ClusterFigma/: ADAS_LT.ui.qml  ADAS_Left.ui.qml  ADAS_Rear.ui.qml  AbsWarning.ui.qml  AdasComp.ui.qml  AdasDRV.ui.qml  BatteryGauge_Comp.ui.qml  BkgrdRectangleLarge.ui.qml  Clock.ui.qml  ClusterLayout.ui.qml  CompMoreInfo.ui.qml  DirectionsMini_Comp.ui.qml  DriveMode.ui.qml  EqBars.ui.qml  FuelGauge_Comp.ui.qml  FuelLevelWarning.ui.qml  GearComp.ui.qml  IncomingCallIP.ui.qml  LampHighBeamWarning.ui.qml  MusicPlayer_Comp.ui.qml  OilPressureWarning.ui.qml  ParkWarning.ui.qml  QsrTurnSignals.ui.qml  (+11 more)
Cluster/Dependencies/: CMakeLists.txt
Cluster/Dependencies/Components/: CMakeLists.txt  ignore-in-qds
Cluster/Dependencies/Components/src/imports/: CMakeLists.txt
Cluster/Dependencies/Components/src/imports/designeffects/: DesignDropShadow.qml  DesignEffectPrivate.qml
Cluster/Dependencies/Components/src/imports/logichelper/designer/: BidirectionalBindingSpecifics.qml
Cluster/Dependencies/Components/src/imports/utils/: JsonListModel.qml
Cluster/GLO/: CMakeLists.txt  Constants.qml  DateTime.qml  JsonData.qml  Themes.qml  data.json  qmldir
Cluster/GLOContent/: AdasView3D.ui.qml  App.qml  CMakeLists.txt  Screen01.ui.qml  Screen02.ui.qml
Cluster/VehicleData/: CMakeLists.txt  VehicleData.qml
Cluster/advancedADAS/: ADAS_FRT.ui.qml  ADAS_LT.ui.qml  ADAS_RT.ui.qml  AdasDRV.ui.qml  TpmsComp.ui.qml
Cluster/advancedTPMS/: TpmsComp.ui.qml
Cluster/axivion/: ci_config.json  cluster-architecture.gvl  cluster-architecture.gxl  cluster-mapping.gxl  compiler_config.json  rule_config.json  start_analysis.sh
Cluster/suite_squish/: run_tests_loop.sh  suite.conf
IVI/: CMakeLists.txt  CMakeLists.txt.shared  IVI.qmlproject  IVI.qmlproject.qtds  IVI.qrc  QtMediaSwipe.qmlproject.qtds.0e71d1e  README.md  qmlmodules  share.qrc
IVI/asset_imports/Quick3DAssets/GenericCarModel/: CMakeLists.txt  GenericCarModel.qml  qmldir
IVI/asset_imports/Quick3DAssets/GenericCarModel/meshes/: body_mesh.mesh  brakeDiskFrLeft_mesh.mesh  brakeDiskRearRight_mesh.mesh  chargerPlatform_mesh.mesh  charger_mesh.mesh  chargingCap_mesh.mesh  dash_mesh.mesh  doorLeft_mesh.mesh  hoodEngineCover_mesh.mesh  hood_mesh.mesh  interior_mesh.mesh  taillights_mesh.mesh  trunkEngineCover_mesh.mesh  trunkLid_mesh.mesh  wheelFrRight_mesh.mesh  wheelRearLeft_mesh.mesh
IVI/asset_imports/Quick3DAssets/Lights/: .qmlls.ini  CMakeLists.txt  Lights.qml
IVI/axivion/: ci_config.json  compiler_config.json  ivi-architecture.gvl  ivi-architecture.gxl  ivi-mapping.gxl  rule_config.json
IVI/content/: App.qml  CMakeLists.txt  Screen01.ui.qml
IVI/content/3d/: GenericCarModel.q3d  Lights.q3d
IVI/content/IVIArt/: ArtistTrack.ui.qml  BtnNavView.ui.qml  BtnNext.ui.qml  BtnPlayMedia.ui.qml  CarView3D.ui.qml  EqBars.ui.qml  KnobComponent_1.ui.qml  ListViewTracks.ui.qml  MapNavigation.ui.qml  MediaPlayerLayout.ui.qml  TopBarSwipe.ui.qml  TrackBar.ui.qml  View3DCar.ui.qml
IVI/content/QtMediaSwipeArt/: AlbumArtComp.ui.qml  BtnMediaView.ui.qml  BtnSound.ui.qml  BtnVehicleView.ui.qml  CarView3D.ui.qml  MedaiPlayer.ui.qml  MediaPlayerLayout.ui.qml  MiniPlayer.ui.qml
IVI/i18n/: qml_en.qm
IVI/imports/: CMakeLists.txt
IVI/imports/Data/: CMakeLists.txt  Themes.qml  Values.qml  qmldir
IVI/imports/IVI/: CMakeLists.txt  qmldir
IVI/imports/IVI/designer/: plugin.metainfo
IVI/imports/QtMediaSwipe/: DataStore.qml
IVI/src/: app_environment.h  import_qml_plugins.h  main.cpp
backend/Data/: Themes.qml  Values.qml  qmldir
common/: CMakeLists.txt
common/designs/: architecture_diagram.puml  class_diagram.puml  sequence_diagram.puml
common/qml/VehicleData/: qmldir
common/src/: MqttClient.cpp  MqttClient.h  VehicleCanInterface.cpp  VehicleData.cpp  VehicleData.h  VehicleDataInterface.h  VehicleMqttInterface.cpp  VehicleMqttInterface.h
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
content/IVIIncCall/: CompAcceptCall.ui.qml  CompDeclineCall.ui.qml  IncomingCall.ui.qml
content/QtMediaSwipeArt/: ArtistTrack.ui.qml  BottomBarSwipe.ui.qml  Btn3DView.ui.qml  BtnNext.ui.qml  BtnPlayMedia.ui.qml  BtnPrev.ui.qml  CarView3D.ui.qml  EqBars.ui.qml  GpsMapView.ui.qml  KnobComponent_1.ui.qml  ListViewTracks.ui.qml  MedaiPlayer.ui.qml  MediaPlayerLayout.ui.qml  MediaPlayerWindow.ui.qml  MiniPlayer.ui.qml  NavView.ui.qml  RoutePerformance.ui.qml  ScrollListPanel.ui.qml  SideLTMediaPlayer.ui.qml  SideRTMediaPlayer.ui.qml  TopBarSwipe.ui.qml  TrackBar.ui.qml  View3DCar.ui.qml
content/images/: BasicLights3_4K.hdr
i18n/: qml_en.qm
imports/: CMakeLists.txt
imports/Data/: CMakeLists.txt  Themes.qml  Values.qml
imports/QtMediaSwipe/: CMakeLists.txt  qmldir
scripts/: build-boot2qt.sh
src/: VehicleCanInterface.cpp  VehicleData.cpp  VehicleData.h  VehicleDataInterface.h  import_qml_plugins.h  vehiclecaninterface.cpp  vehiclecaninterface.h
test-qt-build/: CMakeLists.txt  buildspec-ecr-test.yml  buildspec.yml  main.cpp  test-boot2qt.sh  test-local.sh
test-qt-build/build-boot2qt/: CMakeCache.txt
(+102 files in other folders)
